api/deploy/networking/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: colorapi
  namespace: spagiari
  labels:
    app: colorapi
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: color
    process: api
    product: spagiari
  type: ClusterIP
